Add) 모임/리그 관리 흐름 개선 및 참가자·모임원 데이터 연동
-모임 관리에서 리그 관리를 별도 페이지(/group/:id/manage/league)로 분리하고 진입
-동선 정리
-모임원 부수 저장/조회 API 연동 추가 (group_members.division)
-리그 Step5 불러오기 다이얼로그 복구 및 모임원/부수 로딩 안정화
-리그 목록 응답 정규화로 화면 미표시 이슈 대응
-로그인 성공 시 알럿 제거 후 즉시 이동
-인코딩 깨짐 파일(다수 UI 문구) 정리 및 스키마/마이그레이션 반영

--- a/3ch-web/index.html
+++ b/3ch-web/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/128_우리리그 로고..svg" />
     <title>우리리그</title>
   </head>
   <body>
