--- a/3ch-web/index.html
+++ b/3ch-web/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-    <link rel="icon" type="image/svg+xml" href="/128_우리리그 로고..svg" />
+    <link rel="icon" type="image/png" href="/128_스몰로고.png" />
     <title>우리리그</title>
   </head>
   <body>
